# Metadata-aware-GraphRAG

./: ARCHITECTURE.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  history.py  query.py  sections.py  tables.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: chromadb.py  postgres.py
backend/app/models/: __init__.py  column.py  history.py  section.py  table_meta.py  user.py
backend/app/schemas/: column.py  history.py  section.py  table.py  user.py
backend/app/services/: ingestion.py  query_engine.py
backend/scripts/: seed_admin.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/layout/: Sidebar.css  Sidebar.tsx
frontend/src/components/ui/: Button.css  Button.tsx  GlassCard.tsx  Input.css  Input.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AdminDashboard.css  AdminDashboard.tsx  AuthPage.css  AuthPage.tsx  HistoryPage.css  HistoryPage.tsx  QueryDashboard.css  QueryDashboard.tsx
